Updated overviews and README

--- a/spatiotemporal_forecasting/ConvLSTM.ipynb
+++ b/spatiotemporal_forecasting/ConvLSTM.ipynb
@@ -10,6 +10,9 @@
     "\n",
     "*See <a href=\"https://paperswithcode.com/method/convlstm\">here</a> for latest papers using ConvLSTMs.*\n",
     "\n",
+    "### Dependencies\n",
+    "PyTorch 1.5.0 with CUDA 10.1\n",
+    "\n",
     "### Papers\n",
     "\n",
     "Models currently implemented are:\n",
