Added various models

--- a/spatiotemporal_forecasting/PhyDNet.ipynb
+++ b/spatiotemporal_forecasting/PhyDNet.ipynb
@@ -9,13 +9,7 @@
     "Physical Dynamics Neural Network (PhyDNet) is a neural network architecture for spatiotemporal forecasting. It utilises traditional ConvLSTM cells along with a new Physical Dynamics Cell that models differential equations in latent variable space. This allows for the underlying physics of a problem to be modelled.\n",
     "\n",
     "### Dependencies\n",
-    "PyTorch 1.5.0 with CUDA 10.1\n",
-    "\n",
-    "### Paper\n",
-    "<a href=\"https://arxiv.org/abs/2003.01460\">Disentangling Physical Dynamics from Unknown Factors for Unsupervised Video Prediction</a>\n",
-    "\n",
-    "### Code\n",
-    "<a href=\"https://github.com/vincent-leguen/PhyDNet\">Original repository</a>"
+    "PyTorch 1.5.0 with CUDA 10.1"
    ]
   },
   {
